--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="../Img/icon.png">
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15274bd2db.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
@@ -14,22 +14,22 @@
 </head>
 <body>
     <div class="descripcion1" id="ventana1">
-        <div id="cerrar"><a href="javascript:cerrar()"><img src="../Img/cancel.png" alt=""></a></div>
+        <div id="cerrar"><a href="javascript:cerrar()"><img src="../cancel.png" alt=""></a></div>
         <h1>Descripcion del producto 1</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus ipsum suscipit blanditiis et laudantium mollitia eveniet, recusandae eos doloribus dolores unde, consectetur porro molestias possimus quis nostrum perspiciatis, quidem minus exercitationem vel distinctio. Dolorum voluptates sunt error laborum cupiditate culpa natus, ad maiores ullam obcaecati, suscipit, vel quasi quidem mollitia a eligendi ea quod! At doloremque ducimus perferendis, recusandae dolores laboriosam ab magnam reprehenderit accusantium molestias maxime temporibus quidem illum, atque incidunt enim molestiae sit! Culpa ipsum debitis tempore ducimus repellat obcaecati, tempora est aliquam autem pariatur consequuntur unde, nesciunt quibusdam aliquid, ab consequatur labore libero porro aut nisi itaque.</p>
     </div>
     <div class="descripcion1" id="ventana2">
-        <div id="cerrar"><a href="javascript:cerrar2()"><img src="../Img/cancel.png" alt=""></a></div>
+        <div id="cerrar"><a href="javascript:cerrar2()"><img src="../cancel.png" alt=""></a></div>
         <h1>Descripcion del producto 2</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus ipsum suscipit blanditiis et laudantium mollitia eveniet, recusandae eos doloribus dolores unde, consectetur porro molestias possimus quis nostrum perspiciatis, quidem minus exercitationem vel distinctio. Dolorum voluptates sunt error laborum cupiditate culpa natus, ad maiores ullam obcaecati, suscipit, vel quasi quidem mollitia a eligendi ea quod! At doloremque ducimus perferendis, recusandae dolores laboriosam ab magnam reprehenderit accusantium molestias maxime temporibus quidem illum, atque incidunt enim molestiae sit! Culpa ipsum debitis tempore ducimus repellat obcaecati, tempora est aliquam autem pariatur consequuntur unde, nesciunt quibusdam aliquid, ab consequatur labore libero porro aut nisi itaque.</p>
     </div>
     <div class="descripcion1" id="ventana3">
-        <div id="cerrar"><a href="javascript:cerrar3()"><img src="../Img/cancel.png" alt=""></a></div>
+        <div id="cerrar"><a href="javascript:cerrar3()"><img src="../cancel.png" alt=""></a></div>
         <h1>Descripcion del producto 3</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus ipsum suscipit blanditiis et laudantium mollitia eveniet, recusandae eos doloribus dolores unde, consectetur porro molestias possimus quis nostrum perspiciatis, quidem minus exercitationem vel distinctio. Dolorum voluptates sunt error laborum cupiditate culpa natus, ad maiores ullam obcaecati, suscipit, vel quasi quidem mollitia a eligendi ea quod! At doloremque ducimus perferendis, recusandae dolores laboriosam ab magnam reprehenderit accusantium molestias maxime temporibus quidem illum, atque incidunt enim molestiae sit! Culpa ipsum debitis tempore ducimus repellat obcaecati, tempora est aliquam autem pariatur consequuntur unde, nesciunt quibusdam aliquid, ab consequatur labore libero porro aut nisi itaque.</p>
     </div>
     <div class="descripcion1" id="ventana4">
-        <div id="cerrar"><a href="javascript:cerrar4()"><img src="../Img/cancel.png" alt=""></a></div>
+        <div id="cerrar"><a href="javascript:cerrar4()"><img src="../cancel.png" alt=""></a></div>
         <h1>Descripcion del producto 4</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus ipsum suscipit blanditiis et laudantium mollitia eveniet, recusandae eos doloribus dolores unde, consectetur porro molestias possimus quis nostrum perspiciatis, quidem minus exercitationem vel distinctio. Dolorum voluptates sunt error laborum cupiditate culpa natus, ad maiores ullam obcaecati, suscipit, vel quasi quidem mollitia a eligendi ea quod! At doloremque ducimus perferendis, recusandae dolores laboriosam ab magnam reprehenderit accusantium molestias maxime temporibus quidem illum, atque incidunt enim molestiae sit! Culpa ipsum debitis tempore ducimus repellat obcaecati, tempora est aliquam autem pariatur consequuntur unde, nesciunt quibusdam aliquid, ab consequatur labore libero porro aut nisi itaque.</p>
     </div>
