--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="../Img/icon.png">
+    <link rel="shortcut icon" href="../icon.png">
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15274bd2db.js" crossorigin="anonymous"></script>
@@ -77,25 +77,25 @@
                 <div class="row justify-content-center">
                     <article>
                         <figure class="producto">
-                            <img src="../Img/prenda1.jpg" class="img-fluid" alt="">
+                            <img src="../prenda1.jpg" class="img-fluid" alt="">
                             <figcaption class="overlay">
                                 <a href="javascript:abrir()" class="overlay-texto">Descripcion del producto.</a>
                             </figcaption>
                         </figure>
                         <figure class="producto">
-                            <img src="../Img/prenda2.png" class="img-fluid" alt="">
+                            <img src="../prenda2.png" class="img-fluid" alt="">
                             <figcaption class="overlay">
                                 <a href="javascript:abrir2()" class="overlay-texto">Descripcion del producto.</a>
                             </figcaption>
                         </figure>
                         <figure class="producto">
-                            <img src="../Img/prenda3.jpg" class="img-fluid" alt="">
+                            <img src="../prenda3.jpg" class="img-fluid" alt="">
                             <figcaption class="overlay">
                                 <a href="javascript:abrir3()" class="overlay-texto">Descripcion del producto.</a>
                             </figcaption>
                         </figure>
                         <figure class="producto">
-                            <img src="../Img/prenda4.jpg" class="img-fluid" alt="">
+                            <img src="../prenda4.jpg" class="img-fluid" alt="">
                             <figcaption class="overlay">
                                 <a href="javascript:abrir4()" class="overlay-texto">Descripcion del producto.</a>
                             </figcaption>
