--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="contact-wrapper">
             <div class="contact-form">
                 <h3>Contactanos</h3>
-                <form name="contacto" method="POST" data-netlify="true">
+                <form name="contacto" method="POST" data-netlify="true" data-netlify-recaptcha="true">
                     <p>
                         <label for="name">Nombre</label>
                         <input type="text" name="name" id="name">
