--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <label>Mensaje</label>
                         <textarea name="message" rows="3"></textarea>
                     </p>
+                    <div data-netlify-recaptcha="true"><div>
                     <p class="block">
                         <button type="submit">Enviar</button>
                     </p>
