--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="contact-wrapper">
             <div class="contact-form">
                 <h3>Contactanos</h3>
-                <form name="contacto" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+                <form name="contacto" method="POST" data-netlify="true">
                     <p>
                         <label for="name">Nombre</label>
                         <input type="text" name="name" id="name">
@@ -149,7 +149,6 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam quae possimus architecto enim ratione nemo voluptate soluta, doloribus libero suscipit.</p>
                 <p>asdfghjklñ.com</p>
             </div>
-            <div data-netlify-recaptcha="true"><div>
         </div>
     </div>
     </center>
